<?xml version="1.0"?>
<package format="3">
  <name>assignment1_rt</name>
  <version>0.0.0</version>
  <description>ROS2 assignment1_rt package with turtle UI and custom message</description>

  <maintainer email="omar@example.com">Omar</maintainer>
  <author email="omar@example.com">Omar</author>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark as a package with interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

